# eMule-build-tests

./: .editorconfig  .gitattributes  .gitignore  BUGFIX-COVERAGE.md  README.md  emule-tests.vcxproj  pyproject.toml
emule_test_harness/: __init__.py  bugfix_core_coverage.py  build_tests.py  doctest_results.py  ini.py  live_diff.py  live_e2e_suite.py  live_seed_sources.py  native_coverage.py  paths.py  privacy_guard.py  processes.py  startup_profile.py  workspace_layout.py
helpers/: helper-opencppcoverage-bootstrap.ps1
include/: FullHashProbe.h  HashProbe.h  LongPathTestSupport.h  TestSupport.h
manifests/: README.md  emule-tests.manifest
scripts/: auto-browse-live.py  build-emule-tests.ps1  build_emule_tests.py  config-stability-ui-e2e.py  create-long-paths-tree.py  diag-hash-launch.ps1  diag_hash_launch.py  emule-live-profile-common.py  emule_live_profile_common.py  guard-tracked-files.ps1  guard_tracked_files.py  harness-cli-common.py  harness_cli_common.py  parse-dump.py  preference-ui-e2e.py  publish-harness-summary.ps1  publish-harness-summary.py  resolve-app-root.ps1  resolve-rva.py  resolve-workspace-layout.ps1  rest-api-smoke.py  run-bugfix-core-coverage.ps1  run-config-stability-ui-e2e.ps1  run-live-diff.ps1  run-native-coverage.ps1  run-pipe-live-matrix.ps1  run-rest-api-smoke.ps1  run-shared-files-ui-e2e.ps1  run-startup-profile-scenarios.ps1  run_bugfix_core_coverage.py  run_live_diff.py  run_live_e2e_suite.py  run_native_coverage.py  run_pipe_live_matrix.py  shared-files-ui-e2e.py  shared-hash-ui-e2e.py  startup-profile-scenarios.py
(+109 files in other folders)
